crates/ferromark/tests/snapshots/parser/fenced_code_with_lang_and_meta.snap
---
source: crates/ferromark/tests/snapshot_parse.rs
assertion_line: 32
description: "```ts filename=main.ts\nconst answer = 42;\n```\n"
---
Document [0..46]
  CodeBlock lang=Some("ts") meta=Some("filename=main.ts") value="const answer = 42;\n" [0..46]
