crates/ferromark/tests/snapshots/parser/image_with_title.snap
---
source: crates/ferromark/tests/snapshot_parse.rs
description: "![alt](./logo.png \"A logo\")\n"
---
Document [0..28]
  Paragraph [0..28]
    Image url="./logo.png" alt="alt" title=Some("A logo") [0..27]
